# MaterSDK

./: .gitignore  DOS.totalspin  HIGHK  POSCAR  README.md  cpu.sh  gen.kpt  setup.py  test.h5  test.py  tmp_structure_file
cmake/: matersdk.cmake
demo/: atom.config
demo/adalearn/: pertubation.ipynb
demo/dscribe/: test_g2.py
demo/feature/avg/: avgbond.ipynb  avgbond4xhm.py  msd4xhm.py  slurm-648294.out
demo/feature/avg/other/: allbond2angle4xhm.py  avgangle4xhm.py  avgbond4wep.py
demo/feature/deepmd/: data_system.ipynb  data_system_dp.ipynb  deepmdTileR.ipynb  deepmdTileR_3d.ipynb  dpseTildeR.ipynb  dpseTileRPair.ipynb  dpseTileRPair_3d.ipynb  normalizer.ipynb  normalizer_4test.py  premise.ipynb  premise_3D.ipynb  test_data_system.py
demo/feature/movement/: LiSi.config  LiSi_32.config  POSCAR  movement.ipynb
demo/feature/neighs/: SturtureNeighbors.ipynb  SturtureNeighbors_3D.ipynb
demo/from_c/: nblist_demo.py
demo/infer/pwmatmlff/deepmd/: FFextractor.ipynb  dp_inference.ipynb  dp_inference.py  test.h5
demo/kpath/: HIGHK  gen.kpt
demo/structure/: atom.config  pertubation.ipynb  test.config  test.py
demo/toolkit/pwmat/: bondfft.ipynb  bondfft_test.ipynb
demo/v2/fromcc/: nblist_demo.py
extenstion/lammps/MaterSDK/: pair_deeppot_se.cc  pair_deeppot_se.h
extenstion/lammps/MaterSDK/include/: lmp_neigh_list.h  lmp_se.h
extenstion/lammps/MaterSDK/src/: lmp_neigh_list.cc  lmp_se.cc
extenstion/lammps/MaterSDK/test/: test_se.cc
matersdk.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
matersdk/adalearn/generator/: perturbation.py
matersdk/adalearn/generator/test/: test_perturbation.py
matersdk/calculation/kpath/: kpathSampler.py
matersdk/calculation/kpath/test/: test_kpathSampler.py
matersdk/calculation/kpoints/test/: test_kmesh.py  test_kpointsSampler.py
matersdk/click/: addMag.py  convertFormat.py
matersdk/data/: infoset.py  infosets.py
matersdk/data/deepmd/: data.py  data_system.py
matersdk/data/deepmd/test/: test_data_system.py
matersdk/data/test/: test_infoset.py  test_infosets.py
matersdk/feature/avg/: avgangle.py  avgbond.py  msd.py
matersdk/feature/avg/test/: test_avgbond.py  test_msd.py
matersdk/feature/deepmd/: premise.py  preprocess.py  se.py  se_pair.py
matersdk/feature/graph/: edge.py
matersdk/fromcc/: __init__.py
matersdk/io/publicLayer/: neigh.py  structure.py  traj.py
matersdk/nn/deepmd/: embedding_net.py  fitting_net.py
matersdk/toolkit/pwmat/: avgbond.py  bondfft.py
pflow.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pflow/calculation/: kSampler.py
pflow/calculation/kpath/: kpathSampler.py
pflow/calculation/kpoints/: kmesh.py  kpointsSampler.py
pflow/click/: addMag.py  convertFormat.py
pflow/feature/deepmd/: premise.py  se.py
pflow/io/publicLayer/: neigh.py  structure.py
pflow/io/pwmat/: atomConfigExtractor.py  mixSublattice.py
source/: CMakeLists.txt  conf.py
source/core/: CMakeLists.txt
source/core/include/: AlignedArray.h  arrayUtils.h  vec3Operation.h  vecx.h
source/core/tests/: test_AlignedArray.cc  test_arrayUtils.cc  test_vec3Operation.cc  test_vecx.cc
source/descriptor/deepmd/: CMakeLists.txt
source/descriptor/deepmd/bind/: se4pw_op_bind.cc
source/descriptor/deepmd/include/: envMatrix.h  envMatrixFunction.h  envMatrixOp.h
source/descriptor/deepmd/src/: envMatrixFunction.cc  envMatrixOp.cc
source/descriptor/deepmd/test/: test_envMatrix.cc  test_envMatrixFunction.cc  test_envMatrixOp.cc  test_se4pw.cc
source/descriptor/mtp/: CMakeLists.txt
source/descriptor/mtp/include/: mtpBModule.h  mtpFModule.h  mtpLevel.h  mtpMAngularOp.h  mtpMModule.h  mtpMRadial.h  mtpMRadialOp.h  mtpParam.h
source/descriptor/mtp/src/: mtpBModule.cc  mtpFModule.cc  mtpLevel.cc  mtpMAngularOp.cc  mtpMModule.cc  mtpMRadialOp.cc
source/descriptor/mtp/tests/: test_mlip_level.cc  test_mtpBModule.cc  test_mtpFModule.cc  test_mtpLevel.cc  test_mtpMAngularOp.cc  test_mtpMModule.cc  test_mtpMRadial.cc  test_mtpMRadialOp.cc  test_mtpMRadial_de.cc  test_mtpParam.cc
source/descriptor/mtpr/: CMakeLists.txt
source/descriptor/mtpr/include/: basis.h  mtpBasis.h  mtpParam.h
source/descriptor/mtpr/src/: mtpParam.cc
source/descriptor/mtpr/tests/: test_basis.cc  test_mtpBasis.cc  test_mtpParam.cc
source/docs/: modules.rst  pflow.calculation.kpoints.rst  pflow.calculation.kpoints.test.rst  pflow.featurizer.gridPoint.rst  pflow.featurizer.rst  pflow.io.publicLayer.rst  pflow.io.publicLayer.test.rst  pflow.io.pwmat.input.rst  pflow.io.pwmat.input.test.rst  pflow.io.rst
source/include/: matersdk.h
source/matersdk/feature/deepmd/: CMakeLists.txt
source/matersdk/feature/deepmd/bind/: se_bind.cc
source/matersdk/feature/deepmd/include/: READMD.md  envMatrix.h  se.h  se4pw.h  se4pw_op.h
source/matersdk/feature/deepmd/src/: se4pw_op.cc
source/matersdk/feature/deepmd/test/: demo.cc  demo_se4pw.cc  test.py  test_envMatrix.cc  test_se.cc  test_se4pw.cc  test_se4pw_op.cc  test_se_lmp.cc
source/matersdk/feature/mtp/: CMakeLists.txt
source/matersdk/feature/mtp/include/: angular_2b.h  angular_part.h  level.h  radial_basis.h
source/matersdk/feature/mtp/tests/: test_level.cc  test_radial_basis.cc
source/matersdk/io/publicLayer/: CMakeLists.txt
source/matersdk/io/publicLayer/bind/: nblist_bind.cc  setup.py
source/matersdk/io/publicLayer/bindings/: structure_binding.cc
source/matersdk/io/publicLayer/include/: CpuNeighborList.h  binLinkedList.h  neighborList.h  structure.h
source/matersdk/io/publicLayer/src/: CpuNeighborList.cc  structure.cc  test.py
source/matersdk/io/publicLayer/tests/: test_CpuNeighborList.cc  test_binLinkedList.cc  test_neighborList.cc  test_neighborList_lmp.cc  test_structure.cc
source/nblist/: CMakeLists.txt
source/nblist/bind/: nblist.i  nblist_bind.cc  nblist_bind.h
source/nblist/include/: neighborList.h
source/nblist/tests/: test_neighborList.cc
source/pymatgen4cpp/: CMakeLists.txt
source/pymatgen4cpp/include/: load_file.h
source/pymatgen4cpp/src/: load_file.cc
source/pymatgen4cpp/test/: test_structure.cc
src/core/include/: vecx.h
(+57 files in other folders)
